fix white space on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 @layer base {
     body {
         @apply font-[Raleway];
+        overflow-x: hidden;
     }
     li {
         @apply px-4;
@@ -55,7 +56,6 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
     background-color: rgba(0,0,0,.4);
     /* background-color: #000000cc; */
   }
